# vector4HN

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  modules.md  setup_and_config.md
logs/stats/: usage_stats.csv
reports/: hn_46869024_context.json  hn_46890335_context.json  hn_46902223_context.json  hn_46903558_context.json  hn_46911869_context.json  hn_46911901_context.json  hn_46913793_context.json  hn_46914094_context.json
src/: analyze.py  hn.py  logger.py  main.py  tui.py
tests/: test_caching_logic.py  test_hn.py  test_logging.py  test_retry_mechanism.py
vector4HN.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
